fix: API23 兼容崩溃修复 + 直链弹幕加载缺失修复
- 替换 List.of(API30, 需脱糖) 为兼容写法 (ScanTask/ScanActivity/DanmakuAdapter)
- 替换 Objects.isNull/nonNull(API24) 为 ==/!= (PlaybackService/Media)
- 脱糖依赖 desugar_jdk_libs_nio -> 完整 desugar_jdk_libs (覆盖第三方库潜在同类问题)
- Players: 直链播放分支补充外部弹幕 API 自动加载(此前仅解析分支加载, 直链源弹幕完全失效); 抽取 mergeExternalDanmu 复用